<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_gps_publisher</name>
  <version>0.0.0</version>
  <description>Grabs NMEA sentences through UDP and publishes in a ROS Node</description>
  <maintainer email="leonardo.barbosadasilva@carissma.eu">Barbosa da Silva, Leonardo</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
